4-Secure_mesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 31400
      name: tcp
      protocol: TCP
    hosts:
    - "*"
  - port:
       number: 80
       name: http
       protocol: HTTP
  - port:
       number: 443
       name: https
       protocol: HTTPS
    hosts:
    - "http.test.com"
    tls:
      mode: SIMPLE
      credentialName: tls-keys # must be the same as secret
