4-Secure_mesh/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: demo
spec:
  hosts:
  - "http.test.com"
  - "tcp.test.com"
  exportTo:
  - "."
  - "demo-ingress"
  gateways:
  - ingress-gateway
  http:
  - route:
    - destination:
        host: httpbin-ilb-svc
        port:
          number: 80
  tcp:
  - match:
    - port: 9090
    route:
    - destination:
        host: tcp-echo
        port:
          number: 9000
